--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <h2>Aprenda mais sobre a tecnologia futura</h2>
 
     </section>
+    <figure class="banner">
+        <img class="img_topo" src="img/img.jpg" alt="">
+    </figure>
   
 <script src="js/script.js"></script>
 </body>
