--- a/pagina2.html
+++ b/pagina2.html
@@ -51,16 +51,13 @@
             <h3>O que é a indústria 4.0?</h3>
 
             <figure>
-                <img class="imgsobre" src="img/i1.jpg" alt="img1">
+                <img class="img" src="img/img_01.png" alt="img1">
             </figure>
 
             <div class="txtbenefits">
+                <p class="pbenefits">A Indústria 4.0 é um conceito que representa a automação industrial e a integração de diferentes tecnologias como inteligência artificial, robótica, internet das coisas e computação em nuvem com o objetivo de promover a digitalização das atividades industriais melhorando os processos e aumentando a produtividade.</p>
+               
 
-                <p class="pbenefits">A indústria 4.0 refere-se à rápida digitalização na manufatura nos dias atuais.
-
-                    Não é nem uma tecnologia em si, nem um modelo de negócio. É, na verdade, uma abordagem que busca resultados industriais que não eram possíveis há 15, 10 ou mesmo 5 anos atrás.
-                    
-                    Trata-se da combinação de inovações e tecnologias digitais (avanços como robótica e inteligência artificial, sensores sofisticados, etc), capazes de revolucionar a produção industrial.</p>
 
             </div>  
         </div>
