--- a/pagina3.html
+++ b/pagina3.html
@@ -43,18 +43,26 @@
     </header>
 
     <section class="sobre"> 
-    <h3>Sobre:</h3>
+    <h3>Algumas profissões voltadas para indústria 4.0:</h3>
 
     
     <figure>
-        <img class="imgsobre" src="img/i2.jpg" alt="img2">
+        <img class="imgsobre" src="img/img_02.png" alt="img2">
     </figure>
 
     <div class="sobre">
-        <p>- Maior nível de automação;</p>
-        <p>- Melhor aplicação da manutenção preditiva;</p>
-        <p>- Possibilidade de auto-otimização de melhorias de processo;</p>
-        <p>- Novo nível de eficiência e capacidade de resposta aos clientes.</p>
+        <p>1 - Mecânico de veículos híbridos.</p>
+        <p>2 - Engenheiro de cibersegurança.</p>
+        <p>3 - Especialista em aplicações de embalagens para alimentos.</p>
+        <p>4 - Gestor de logística de canteiro de obras.</p>
+        <p>5 - Mecânico especialista em telemetria.</p>
+        <p>6 - Programador de unidades de controles eletrônicos.</p>
+        <p>7 - Técnico em informática veicular.</p>
+        <p>8 - Analista de IoT (internet das coisas).</p>
+        <p>9 - Analista de segurança e defesa digital.</p>
+        <p>10 - Especialista em big data.</p>
+        <p>11 - Técnico em impressão de alimentos.</p>
+        <p>12 - Técnico de projetos de produtos de moda.</p>
     </div>
   
     </section>
